--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,4 +20,4 @@ jobs:
         run: dotnet workload install maui
 
       - name: Build Android project
-        run: dotnet build YourApp.csproj -c Release -f net9.0-android
+        run: dotnet build MauiApp1.csproj -c Release -f net9.0-android
