Add APK upload step in build workflow
Add step to upload APK artifact after building.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,3 +21,10 @@ jobs:
 
       - name: Build Android project
         run: dotnet build MauiApp1/MauiApp1/MauiApp1.csproj -c Release -f net9.0-android
+      
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: MauiApp-Android
+          path: '**/bin/Release/net9.0-android/*.apk'
+
