--- a/MauiApp1/MauiApp1/MauiApp1.csproj
+++ b/MauiApp1/MauiApp1/MauiApp1.csproj
@@ -51,7 +51,9 @@
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
-		<MauiImage Update="Resources\Images\dotnet_bot.png" Resize="True" BaseSize="300,185" />
+		<!-- <MauiImage Update="Resources\Images\dotnet_bot.png" Resize="True" BaseSize="300,185" /> -->
+		<MauiImage Include="Resources\Images\*.svg" />
+
 		
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
